# xds

./: .bazelrc  .gitignore  BUILD  DEVELOPER.md  MODULE.bazel  README.md  WORKSPACE  buf.gen.go.yaml  buf.gen.python.yaml  buf.yaml  extension_for_bazel_gazelle.bzl  extension_for_com_github_grpc_grpc.bzl  extension_for_com_google_googleapis.bzl  extensions.bzl  googleapis_ext.bzl  non_module_deps.bzl
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: buf-pull-request.yaml  buf-push.yaml
bazel/: api_build_system.bzl  dependency_imports.bzl  envoy_http_archive.bzl  external_deps.bzl  external_proto_deps.bzl  protobuf.patch  repositories.bzl  repository_locations.bzl
ci/: azure-pipelines.yml  check.sh
go/: go.mod  go.sum
go/udpa/annotations/: migrate.pb.go  migrate.pb.validate.go  security.pb.go  security.pb.validate.go  sensitive.pb.go  sensitive.pb.validate.go  status.pb.go  status.pb.validate.go  versioning.pb.go  versioning.pb.validate.go
go/udpa/data/orca/v1/: orca_load_report.pb.go  orca_load_report.pb.validate.go
go/udpa/service/orca/v1/: orca.pb.go  orca.pb.validate.go  orca_grpc.pb.go
go/udpa/type/v1/: typed_struct.pb.go  typed_struct.pb.validate.go
go/xds/annotations/v3/: migrate.pb.go  security.pb.go  sensitive.pb.go  status.pb.go  status.pb.validate.go  versioning.pb.go
go/xds/core/v3/: authority.pb.go  cidr.pb.go  collection_entry.pb.go  collection_entry.pb.validate.go  context_params.pb.go  extension.pb.go  resource.pb.go  resource_locator.pb.go  resource_locator.pb.validate.go  resource_name.pb.go
go/xds/data/orca/v3/: orca_load_report.pb.go  orca_load_report.pb.validate.go
go/xds/service/orca/v3/: orca.pb.go  orca_grpc.pb.go
go/xds/type/matcher/v3/: cel.pb.go  cel.pb.validate.go  domain.pb.go  domain.pb.validate.go  http_inputs.pb.go  http_inputs.pb.validate.go  ip.pb.go  matcher.pb.go  matcher.pb.validate.go  range.pb.go  range.pb.validate.go  regex.pb.go  regex.pb.validate.go  string.pb.go  string.pb.validate.go
go/xds/type/v3/: cel.pb.go  cel.pb.validate.go  range.pb.go  typed_struct.pb.go
orca/: orca-spec.md
proposals/: TP1-xds-transport-next.md  TP2-dynamically-generated-cacheable-xds-resources.md  TP3-xds-error-propagation.md
python/: LICENSE  pyproject.toml  setup.py
python/buf/validate/: validate_pb2.py
python/udpa/annotations/: migrate_pb2.py  security_pb2.py  sensitive_pb2.py  status_pb2.py  versioning_pb2.py
python/udpa/data/orca/v1/: orca_load_report_pb2.py
python/udpa/service/orca/v1/: orca_pb2.py
python/udpa/type/v1/: typed_struct_pb2.py
python/validate/: validate_pb2.py
python/xds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/xds/annotations/v3/: migrate_pb2.py  security_pb2.py  sensitive_pb2.py  status_pb2.py  versioning_pb2.py
python/xds/core/v3/: authority_pb2.py  cidr_pb2.py  collection_entry_pb2.py  context_params_pb2.py  extension_pb2.py  resource_locator_pb2.py  resource_name_pb2.py  resource_pb2.py
python/xds/data/orca/v3/: orca_load_report_pb2.py
python/xds/service/orca/v3/: orca_pb2.py
python/xds/type/matcher/v3/: cel_pb2.py  domain_pb2.py  http_inputs_pb2.py  ip_pb2.py  matcher_pb2.py  range_pb2.py  regex_pb2.py  string_pb2.py
python/xds/type/v3/: cel_pb2.py  range_pb2.py  typed_struct_pb2.py
tools/: buf_generate.sh  generate_go_protobuf.py  generate_lang_files_from_protos.py  generate_protobuf.py
udpa/annotations/: BUILD  status.proto
udpa/data/orca/v1/: BUILD  orca_load_report.proto
udpa/extension/v1/: BUILD  extension.proto
udpa/service/orca/v1/: BUILD  orca.proto
udpa/type/matcher/v1/: BUILD  matcher.proto  regex.proto  string.proto
udpa/type/v1/: BUILD  typed_struct.proto
xds/annotations/v3/: BUILD  status.proto
xds/core/v3/: BUILD  authority.proto  cidr.proto  collection_entry.proto  context_params.proto  extension.proto  resource.proto  resource_locator.proto  resource_name.proto
xds/data/orca/v3/: BUILD  orca_load_report.proto
xds/service/orca/v3/: BUILD
xds/type/matcher/v3/: BUILD  cel.proto  domain.proto  http_inputs.proto  ip.proto  matcher.proto  range.proto  regex.proto  string.proto
xds/type/v3/: BUILD  cel.proto  typed_struct.proto
