module(name = "xds", version = "0.0.0", repo_name = "com_github_cncf_xds")

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.5.0", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.32.0", repo_name = "bazel_gazelle", dev_dependency = True)
bazel_dep(name = "protobuf", version = "23.1", repo_name = "com_google_protobuf")
bazel_dep(name = "re2", version = "2024-03-01", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "rules_cc", version = "0.0.9", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.41.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_java", version = "5.5.0", dev_dependency = True)
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_python", version = "0.31.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(name = "go_sdk", version = "1.20.2")
use_repo(go_sdk, "go_sdk")

non_module_deps = use_extension("//:non_module_deps.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "com_github_grpc_grpc",
    "com_google_googleapis",
    "com_envoyproxy_protoc_gen_validate",
    "org_golang_x_tools",
)

extension_for_com_google_googleapis = use_extension("//:extension_for_com_google_googleapis.bzl", "extension_for_com_google_googleapis")
use_repo(extension_for_com_google_googleapis, "com_google_googleapis_imports")

extension_for_com_github_grpc_grpc = use_extension("//:extension_for_com_github_grpc_grpc.bzl", "extension_for_com_github_grpc_grpc")
use_repo(extension_for_com_github_grpc_grpc, "protocol_compiler")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")
use_repo(
    go_deps,
    "com_github_envoyproxy_protoc_gen_validate",
    "com_github_golang_protobuf",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)

extension_for_bazel_gazelle = use_extension("//:extension_for_bazel_gazelle.bzl", "extension_for_bazel_gazelle")
use_repo(
    extension_for_bazel_gazelle,
    "com_github_lyft_protoc_gen_star",
    "com_github_spf13_afero",
)
