[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xds"
authors = []
version = "0.1.0"
description = "generated python libraries for xds protos"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["protobuf >=5.29.1", "protoc-gen-validate"]

[project.urls]
Home = "https://github.com/cncf/xds"

[tool.flit.metadata]
module = "xds"
requires-python = ">=3.7"
