[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "xds"
version = "0.1.0"
description = "xds Protocol Buffer Messages"
requires-python = ">=3.7"  # Or the appropriate minimum Python version
dependencies = [
    "protobuf==6.30.0"
]

[project.optional-dependencies]

[tool.setuptools.packages.find]
where = ["."] 